# cpp-grpc-microservices-template

./: CMakeLists.txt  README.md  client.cpp  server.cpp
proto/: templateProto.proto
tests/: testServer.cpp
